# Compile-Bento4

./: CMakeLists.txt  README.md
.github/workflows/: build_linux.yml  build_win.yml
src/: Ap4Decrypt.cpp  Ap4Decrypt.hpp  main.cpp
